--- a/TyRenderer/imgui.ini
+++ b/TyRenderer/imgui.ini
@@ -14,17 +14,22 @@ Size=170,241
 Collapsed=0
 
 [Window][Details]
-Pos=0,8
+Pos=6,15
 Size=250,204
 Collapsed=0
 
 [Window][Animations]
-Pos=1085,5
-Size=193,198
+Pos=770,1
+Size=228,198
 Collapsed=0
 
 [Window][Object]
-Pos=698,621
-Size=577,96
+Pos=640,601
+Size=358,96
+Collapsed=0
+
+[Window][Test Animations]
+Pos=255,600
+Size=727,100
 Collapsed=0
 
