Animation system updates and optimizations. Mesh material loading/display with phong shader.

--- a/TyRenderer/imgui.ini
+++ b/TyRenderer/imgui.ini
@@ -29,7 +29,12 @@ Size=358,96
 Collapsed=0
 
 [Window][Test Animations]
-Pos=255,600
-Size=727,100
+Pos=41,600
+Size=941,100
+Collapsed=0
+
+[Window][Animation]
+Pos=847,5
+Size=150,220
 Collapsed=0
 
